<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:id="@+id/main"
    android:layout_margin="5dp"
    android:padding="2dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginBottom="15dp"
        android:layout_margin="5dp"
        android:textColor="@color/blue"
        android:text="@string/Parent_Guardian_Registration"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"/>



    <EditText
        android:id="@+id/editTextGuardian_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColorHint="@color/black"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:autofillHints="name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/Parent_Guardian_Names"
        android:inputType="text" />

    <EditText
        android:id="@+id/Guardian_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColorHint="@color/black"
        android:layout_marginBottom="15dp"
        android:autofillHints="emailAddress"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/Parent_Guardian_Email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/Parent_Guardian_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Parent_Guardian_Phone"
        android:background="@color/white"
        android:textColorHint="@color/black"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/Guardian_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColorHint="@color/black"
        android:layout_marginBottom="15dp"
        android:autofillHints="password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/Parent_Guardian_Password"/>


    <Button
        android:id="@+id/buttonparent_guardianRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/blue"
        android:layout_margin="30dp"
        android:textSize="25sp"
        android:text="@string/r" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:id="@+id/linktologin"/>

</LinearLayout>