<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_margin="15dp"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/white"
        android:layout_marginBottom="15dp"
        android:textColor="@color/blue"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/Parent_Guardian_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Parent_Guardian_Email"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Parent_Guardian_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Parent_Guardian_Password"
        android:autofillHints="password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/white"
        android:textColorHint="@color/black"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/Login" />

</LinearLayout>